# air-quality-prediction

./: .env.example  .gitignore  RESULTS.md  Readme.md  basic_info.md  plan.md  problem_info.md  pyproject.toml  result.md
.streamlit/: config.toml
app/: streamlit_app.py
data/raw/: cities.csv  merged.csv
data/raw/weather/: bengaluru_weather.csv  bengaluru_weather_2015.csv  delhi_weather.csv  delhi_weather_2015.csv  hyderabad_weather.csv  hyderabad_weather_2015.csv  kolkata_weather.csv  kolkata_weather_2015.csv  mumbai_weather.csv  mumbai_weather_2015.csv
legacy/: README.md
legacy/src/: 03_graph_construction.py  04_train.py  06_live_ingest.py  live_history.py
legacy/src_torch/: 03_graph_construction.py  04_train.py  05_explain.py  06_live_ingest.py  07_predict_live.py
notebooks/: create_final_data.ipynb  live_data.ipynb  pollution_data_understanding.ipynb  weather_eda.ipynb
outputs/: model_comparison.csv  per_city_metrics.csv  predictions.csv
src/: 02_feature_engineering.py  03_graph_construction.py  03_train.py  04_explain.py  04_train.py  05_explain.py  05_live_ingest.py  06_live_ingest.py  06_predict_live.py  07_predict_live.py  fetch_weather.py  fetch_weather_data.py
