[project]
name = "airmind"
version = "0.1.0"
description = "Spatiotemporal PM2.5 Forecasting for Indian Cities using XGBoost + cross-city features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "xgboost==2.0.3",
    "shap==0.45.1",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "streamlit==1.35.0",
    "requests==2.32.2",
    "python-dotenv==1.0.1",
    "pyarrow==16.0.0",
    "joblib==1.4.2",
]
